something to add and delete

--- a/_posts/CS231n/2022-01-15-CS231n_7.md
+++ b/_posts/CS231n/2022-01-15-CS231n_7.md
@@ -10,243 +10,324 @@ toc : true
 toc_sticky: true
 comments: true
 ---
+신경망 학습에 대하여 알아보자
 
-# Image Classification
 
-이미지 분류는 컴퓨터비전에 있어서 주요한 작업으로 <br/> 
-input image에 대하여 어떤 category에 속하는지 결정하는 과정이다.<br/>
+지난 시간엔 데이터 전처리에 대해 배웠다.
 
-하지만 여러가지 문제점이 존재한다.<br/>
-컴퓨터는 이미지를 볼때 사람과 같이 인식하는 것이 아니라 <br/>
-여러개의 숫자들에 대한 격자판으로 인식하기 때문이다.(숫자들의 집합) <br/>
-이것을 `sematic gap` 이라 일컫는다. <br/>
+![](/assets/image/2022-02-18-22-32-11.png)
 
-따라서 이미지 분류에서는 다음과 같은 변화에 상당히 취약하다. <br/>
+`normailization` 이전에는 손실함수가 아주 약간의 가중치 변화에도 예민하게 변화한다.
 
-1. Vewpoint varaition (카메라 위치 변화)
-2. Illumination (조명에 의한 변화)
-3. Deformation (다양한 자세등 객체 변형)
-4. Occulision (가려짐에 의한 변화)
-5. Background Clutter (배경과 유사한 색의 객체)
-6. Intraclass variation (생김새, 크기, 색 등 클래스 내부 분산)
+`normalization` 을 하게되면 데이터의 중심을 원점에 맞추고 (zero-cneter)
 
-`Image Classification` 에는 크게 2가지 접근법이 있다.
+unit variance로 만들어주게 된다. 
 
-> 1. edge등의 feature를 명시적 규칙집합으로 이해하는 방법
-> 2. Data 중심으로 접근하는 방법
+이 경우 최적화가 더 쉽고 학습이 잘된다. 
 
-- 명시적 규칙집합에 단점
-  1. 강인(robust) 하지 않음
-  2. 다른 객체에 분류에 대한 확장성이 낮음
+오늘은 
+- Fancier Optimization
+- Regularization
+- Transfer Leaning
 
+에 대해서 배워보자
 
-이러한 문제를 해결하기 위한 방법으로 data 중심 접근 방법이 등장했다.
+# Fancier Optimization
 
-- Data 중심 접근
-  1. 이미지와 라벨에 대한 데이터셋을 수집
-  2. 머신러닝을 이용하여 classifier를 학습
-  3. 새로운 이미지에 대하여 classifier 성능 평가  
 
+## SGD (Stochastic Gradient)
+우선 가장 간단한 최적화 알고리즘을 살펴보자
 
-# K-Nearest Neighbor
+```python
+# Vanila Gradinet Descent
 
-`Image Classification`에서 사용하는 알고리즘 종류 중 하나이다.<br/>
-해당 알고리즘은 크게 두 가지 step으로 구성된다.<br/>
+while True:
+   weights_grad = evalute_gradient(loss_fun, data, weighs)
+   weights += - step_size * weights_grad # perform parameter update 
+```
 
-1. `train` : 모든 데이터와 라벨을 기억
-2. `predict` : 새로운 input에 대하여 training한 이미지와 가장 유사한 label을 예측
+바로 Stocahstic Gradient Descent 이다.
 
-K-NN에서 주요한 파라미터는 크게 두 가지가 있다.
+1. 미니배치 안의 data에서 loss를 계산
+2. gradeint의 반대방향으로 weight 벡터를 update
+3. 1,2를 반복하면 결국 아래 사진의 붉은색의 수렴하고 loss는 감소한다. 
 
-1. `K` : 이웃의 수
-2. `Distance Metric` : 유사도를 측정하는 방식 (L1, L2등)
+![](/assets/image/2022-02-18-22-36-54.png)
 
-우선 K에 따른 알고리즘의 차이를 알아보자.
+해당 방법의 문제점에 대해서도 살펴보자.
+- w1, w2가 있을때 둘중 하나는 update를 해도 손실 함수가 아주 느리게 변한다.
+   > gradeint 방향이 고르지 못하기 때문에 지그재그 발생 <br/>
+   ex) 수평축은 천천히 수직축은 급격히 변화 <br/>
+    고차원으로 갈수록 이 현상은 더 심해진다. 
 
-해당 알고리즘은 Distance Metrice을 이용해 가까운 K개의 이웃을 찾고<br/>
-이웃끼리 투표하는 방법이다. 
+![](/assets/image/2022-02-18-22-38-17.png)
 
-K=1일때 살펴보면 `가장 가까운 이웃` 만을 보기 때문에 녹색 영역 가운데<br/>
-노란색 영역이 발생하거나, 초록 영역이 파란영역을 침범하는 등의 문제가 발생한다.<br/>
+Q. loss가 한 방향으로는 빠르게, 다른 방향으론 느리게 변할경우 어떻게 될까?
+ > 빠른 방향으로 학습이 가중되고 느린 방향으로는 학습이 덜 진행된다.
 
-K=3, 5로 늘리게 되면 결정 경계가 더 부드러워지고 더 좋은 결과를 보인다. <br/>
-즉, K수를 높이면 잡음에 강해지는 것을 알 수 있다.
+Q. loss function이 local minima 혹은 saddle point를 가지면 어떻게 될까?
+ > 1. local minima 경우 oppostie gradient =0이 됨<br/>
+> 2. saddle point 경우 한쪽 방향으로는 증가하고 다른 한쪽방향으론 감소한다.<br/>
+> 고차원 공간에서 saddle point가 의미하는 것은 어떤 방향으론 loss가 증가하고 <br/>
+> 몇몇 방향은 loss가 감소한다. 따라서 depp neural network는 local minimum보다 <br/>
+> saddle point에 취약하다.
+   
+![](/assets/image/2022-02-18-22-48-32.png)
+> saddle point 근처에서 gradient는 0이 아니지만 기울기가 아주 작다 <br/>
+> gradient를 계산해서 update해도 기울기가 아주 작기 때문에 현재 가중치의 위치가 <br/>
+> saddle point 근처라면 update는 아주 느리게 진행된다. 
 
 
-이때, 레이블링이 안된 흰색 지역은 <br/>
-K-NN이 대다수를 결정할 수 없는 지역이다. 
+SGD를 이용하여 손실함수 계산시 엄청 많은 training set 각각의 loss를 전부 계산해야 한다.
 
-![](/assets/image/2022-02-01-02-46-01.png)
+그래서 실제로는 미니배치의 데이터들만 가지고 loss를 추정한다. 
 
-이번에는 `Distnace Metrice` 에 대해 자세히 알아보자. 
+이 방법은 매번 정확한 gradient를 얻을수 없다. 추정한 값만 구할뿐이다.
 
-강의에서 소개한 방법은 2가지이다. 이 외에도 다양한 방법이 존재한다.<br/>
+따라서 noise가 존재하고 minima까지 도달하는데도 시간이 오래걸린다. 
 
-1. `L1 distance` 단순히 두 이미지에 거리 차이를 합산하는 방법 <br/>
-   `Manhattan distance` 라고도 부른다.<br/> 
-   좌표계에 의존적인 data 사용시 사용<br/>
-    ex) 각 직원 근속연수, 봉급 등 특징적인 요소
+![](/assets/image/2022-02-18-22-52-32.png)
 
- <p align="center">
+## SGD + Momentum
+**gradeint 계산시 velocity를 이용해보면 어떨까?**
 
+위 아이딩로 나온 방법이 SGD에 모멘텀을 추가한 방식이다.
 
-$${
-d1(I_1, I_2) = \displaystyle\sum_{p}\left\lvert I_1^p - I_2^p\right\rvert
-}$$
+기존 SGD는
+$$x_{t+1} = x_t - \alpha \nabla f(x_t)$$
 
-</p>
+``` python
+while True:
+   dx = compute_gradient(x)
+   x += learning_rate * dx 
+```
 
-![L1 distance](/assets/image/2022-02-01-02-42-51.png)
+SGD + Momentum
+$$v_{t+1} = \rho v_t + \nabla f(x_t) \\ x_{t+1} = x_t - \alpha v_{t+1}$$
 
-2. `L2 distance` 두 픽셀간 차이의 제곱합의 제곱근을 씌우는 방법<br/>
-   `Euclidean distance` 라고도 부른다.<br/>
-   좌표계에 의존적이지 않을때 사용
 
-<p align="center">
+```python
+vx = 0
+while True:
+   dx = compute_gradient(x)
+   vx = rho * vx + dx
+   x += learning_rate * vx
+```
 
+여기서 rho 는 추가된 하이퍼파라미터 (모멘텀 비율을 의미)로
 
-$${
-d2(I_1, I_2) = \sqrt{\sum_{p}(I_1^p - I_2^p)^2}
-}$$
+ 보통 0.9와 같은 높은값으로 설정한다. 
 
-</p>
+SGD에 모멘텀을 추가하게 될 경우
 
-아래 이미지를 통해 L1, L2 distance를 사용하는 상황을 시각적으로 확인 가능하다.<br/>
+공이 굴러 내려가는 상황과 유사하다고 볼 수 있다.
 
-![](/assets/image/2022-02-01-03-00-08.png)
-![](/assets/image/2022-02-01-03-03-33.png)
+local minimum에 도달해도 여전히 velocity를 가지고 있기 때문에 
 
-우리는 사전에 K값과 distance를 사용할지 등을 결정해주어야 하는데 <br/>
-이러한 파라미터를 `Hyperparamter` 라고 부른다.<br/>
-그렇다면 우리는 어떤 K값을 사용하는 것이 좋을까? <br/>
+gradinet는 0이라도 움직일 수 있다.
 
-크게 3가지 방법에 대해서 알아보자. 
+![](/assets/image/2022-02-18-23-08-58.png)
 
-1. 학습데이터의 정확도와 성능을 최대화 하는 파라미터를 선택
 
-   > 결과부터 말하자면 **절대 해서는 안되는 방법**<br/>
-   > 학습데이터에 없던 새로운 데이터에 대해 좋은 성능을 보장할 수 없다. 
-   > ![](/assets/image/2022-02-01-03-20-19.png)
+## Nesterov Momentum
+![](/assets/image/2022-02-18-23-09-39.png)
 
-2. 데이터를 `train`과 `test` set으로 나누어 학습시킨후 가장 성능이 좋은것을 선택
+앞서 배운 모멘텀을 추가하는 방식은
 
-   > 이 방법 역시 **절대 해서는 안되는 방법**<br/>
-   > 머신러닝의 궁극적인 목적은 한 번도 보지 못한 데이터에 대해서 잘 동작하는 것<br/>
-   > 그저 `test set`에서만 잘 동작하는 하이퍼 파라미터를 고른 것일 수 있기 때문<br/>
-   >  ![](/assets/image/2022-02-01-03-20-39.png)
+현재지점에서 gradient를 계산후 veclocity와 결합하는 방식이다.
 
-3. 데이터를 `train`, `validation`, `test` set으로 분리후 `validation`에서 가장 좋은것을 선택 후<br/>
-   `test`는 단 한 번만 수행하는 방법 
+반면 `Nestrerov Momentum`은  우선 velocity 방향으로 움직이고
 
-    > 해당 방법이 가장 권장되는 방법이고 실제로 많이 쓰인다.<br/>
-    >  ![](/assets/image/2022-02-01-03-21-03.png)
+그 지점에서의 gradient를 계산하는 방식이다. 그리고 다시 원점으로 돌아가
 
-4. **Cross-Validation** : `train` 데이터를 여러 부분으로 나눈 뒤 번갈아 가며 `validation`으로 지정<br/>
-   `test` 데이터를 정해놓고 마지막에만 사용하는 방법.
+그 둘을 결합한다.
 
-   > 학습 자체가 계산량이 많기 때문에 딥러닝 같은 큰 모델에서는 잘 사용되지 않는다.
-   >  ![](/assets/image/2022-02-01-03-23-28.png)
+vecloicty 방향이 잘못되었을 경우에는 
 
+현재 gradeint 방향을 좀 더 활용할 수 있도록 해주는 방식이다.
 
-지금까지 우리는 K-Nearest Neighbor를 알아보았다.<br/>
-하지만 K-NN은 이미지를 분류함에 있어서 **절대 사용되서는 안된다.**<br/>
-그 이유는 다음과 같다.<br/>
+하지만 Neural Network와 같은 non-convex problem에서는 성능을 보장할 수 없다.
 
-1. 모든 train에 대한 정보를 가지고 있어야 하므로 매우 느리다.
-2. `Distance Metric`은 픽셀단위에서 별로 유용한 정보가 아니다. (not informative)<br/>
-   ![](/assets/image/2022-02-01-03-27-47.png)
-   해당 이미지는 모두 같은 L2 distnace를 갖는다. 
-3. 차원이 늘어나면 필요한 train data가 기하급수적으로 증가한다. (차원의 저주)
+$$ v_{t+1} = \rho v_t - \alpha \nabla f (x_t + \rho v_t) $$
+$$ x_{t+1} = x_t + v_{t+1} $$
 
+위 식에서 변수들을 적절히 바꾸면 loss와 gradient를 같은 점에서 계산가능하다.
 
 
+${\hat{x_t} = x_t + \rho v_t}$$ 로 변형한뒤
 
-# Linear Classifcation
+$$ v_{t+1} = \rho v_t - \alpha \nabla f(\hat{x_t}) \\ 
+   \hat{x_{t+1}} = \hat{x_t} - \rho v_t + (1 + \rho)v_{t+1}
+$$
 
-이제는 `Linear Classfiers`에 대해 알아보자. <br/>
+## AdaGrad
 
-`Linear classifiers` 는 쉽게 설명하자면 `레고 블럭`과 같다. <br/>
-우리는 이 `레고 블럭` 들을 쌓아서 `Neural Network`를 생성할 수 있다. <br/>
+이 방법은 훈련 도중 계산되는 gradient를 활용하는 방법이다.
 
-앞서 배운 K-NN은 파라미터가 없다. (하이퍼 파라미터는 존재) <br/>
-그저 `training set`을 가지고 있고, 모든 `training set`을 `test time`에 사용할 뿐이다.<br/>
+velocity term 대신 grad sqared term을 이용한다.
 
-하지만 `Parametric Approach`에서는 트레이닝 데이터의 정보를 요약한후 정보를 `W`에 모아준다. <br/>
-이렇게 하게되면 더 이상 `test time`에서 `training set`이 필요하지 않다. 
+- 학습 도중에 계산되는 gradient에 제곱을 해서 계속 더해준뒤에
 
-![](/assets/image/2022-02-01-03-46-13.png)
+- update 할 때 update term을 앞서 계산한 gradeint 제곱항으로 나누어준다.
 
-해당 방법은 가장 쉬운 모델 설계방법으로 단순히 `W`와 `x`를 곱할 뿐이다. <br/>
-일부 `bias` 를 더하는 경우도 존재한다. 이때는 **데이터와 무관하게** <br/>
-특정 클래스에 **우선권을 부여**한다. 
-ex) 고양이 데이터가 강아지 데이터 보다 많은 경우 - 고양이 클래스 bias 증가 
+``` python
+grad_squared = 0
+while True:
+   dx = compute_gradient(x)
+   grad_sqaured += dx * dx 
+   x -= learning_rate * dx / (np.sqrt(grad_sqaured) + 1e-7)
+```
 
-쉬운 예제를 한번 살펴보자.<br/>
+![](/assets/image/2022-02-18-23-49-40.png)
 
-      1. `input imasge`를 열벡터로 펴준다.
-      2. 해당 문제에서는 임의로 정한 `W`가 존재한다. `W` 에 1번에서 만든 열벡터롤 내적해준다.<br/>
+Q. condition number인 경우 (np.sqrt(grad_sqaured) + 1e-7) 값은?
+ > A. small dimension에서는 gradient의 제곱 값 합이 작다. <br/>
+ 이 작은 값이 나눠지므로 가속도가 붙는다.<br/>
+ large dimension에서는 gradient가 큰 값이므로 큰 값이 나눠진다. <br/>
+ 따라서 속도가 점점 줄어든다. 
 
-    (정확히는 W의 각행은 각 이미지에 대한 템플릿을 의미)<br/>
-    여기서 내적은 클래스 간 템플릿의 유사도를 측정해주는 기능을 한다.<br/>
+ Q. Adagrad를 진행할 수록 어떤일이 발생하는가?
+   > A. 값이 점점 작아진다. <br/>
+   업데이트한  gradient의 제곱이 계속해서 더해지므로 이 값은 서서히 증가한다.<br/>
+   이 증가한 값으로 나눠주게 되면 step size는 점점 더 작은 값이 된다.
 
-      3. 내적 결과에 `bias`를 더해준다.<br/>
+   손실함수가 convex한 경우에 점점 작아지는 것은 좋은 특징이 될 수 있다.
 
-    bias는 독립적인 데이터로 각 클래스에 scailing factor를 더해주는 것.<br/>
+   convex case에서는 minimum에 근접하면 서서히 속도를 줄여서 수렴하면 아주 좋다.
 
- ![](/assets/image/2022-02-01-03-53-38.png)
+   하지만 non-convex case에서는 문제가 발생한다.
 
- 하지만 `Linear Classification`에도 문제점이 존재한다. <br/>
- 각 클래스에 대해서 단 하나의 템플릿만 학습가능하다는 점이다. <br/>
- 이렇게 될 경우 풀수 없는 여러가지 문제들이 존재한다. <br/>
+   saddle point에 걸려버렸을 때 AdaGrad는 점점 멈춰버릴 수 있다. 
 
-![](/assets/image/2022-02-01-03-56-59.png)
+   ## RMSProp
+   
+``` python
+grad_squared = 0
+while True:
+   dx = compute_gradient(x)
+   grad_sqaured = dexcay_rate * grad_squared + (1 - decay_rate) * dx * dx
+   x -= learning_rate * dx / (np.sqrt(grad_sqaured) + 1e-7)
+```
 
-비록 `Linear Classifcation`이 풀지 못하는 다양한 문제들이 존재하지만, <br/>
-아주 쉽게 이해하고 해석할 수 있는 알고리즘 이라는데 의의가 있다. <br/>
+기존의 누적값에 dexcay_rate를 곱해주는 방식이다.
 
-우리는 지금까지 `Linear Classifier`가 어떻게 생겼고 어떻게 동작하는지를 배웠다 <br/>
-아직 어떻게 `W`를 구할수 있는지는 배우지 않았다.<br/>
-다음 시간에는 `Loss function`, `Optimization`, `CNN`에 대해 배울 예정이다.  
+현재 gradeint 제곱은 (1-decay_rate)를 곱해주고 더해준다. 
 
-# Question
+보통 decay_rate는 0.9 또는 0.99를 사용한다.
 
-1. N개의 examples을 가지고 있을때, NN-classifier의 train, prediction 함수의 시간복잡도는?
+## Adam
 
-   > `Train` O(1), `Predict` O(N) <br/>
-   > predict단계에서 N개의 학습데이터 전부를 테스트이미지와 비교해야만 하므로<br/>
-   > 상당히 느리다. 우리는 train time은 느리더라도 test time은 빠르길 원한다.<br/>
+Adam은 가장 많이 쓰이는 방법이다.
 
-2. 최적의 하이퍼 파라미터를 찾을때 까지 학습을 다시 시키는 것은 흔한 방법인가?
+``` python
+first_moment = 0
+second_moment = 0
 
-   > 그때 그때 다르다. 하지만 시간적 여유가 있을때는 권장
+while True:
+   dx = compute_gradient(x)
+   first_moment = beta1 * first_moment + (1 - beta1) * dx
+   second_moment = beta2 * second_moment + (1 - beta2) * dx * dx
+   x -= learning_rate * first_moment / (np.sqrt(second_moment) + 1e-7)
+```
+   
+first moment는 velocity를 담당한다.
 
+second moment는 초기에 0으로 초기화하고, 1회 update 이후에도
 
+여전히 0에 가깝다. update step에서 second moment로 나누면 초기 step이
 
-# Summary
+엄청나게 커진다.
 
-## K-NN
+이 커진 step이 실제로 손실함수가 가파르기 때문이 아니라는것에 주의하자
 
-1.  `Image Classification`은 입력 이미지에 대하여 해당 이미지가 속하는 catergory를 찾는 기법<br/>
-    `training set`은 image와 label을 가지고, `test set`은 input의 label을 예측한다. 
-2.  `K-Nearest Neighbors` classifier는 `training set` 중에서 가장 가까운 샘플을 골라서 label을 예측
-3.  K-NN에서 하이퍼 파라미터는 `Distance Metric`과 `K` 이다.
-4.  `L1 (Manhattan)`는 특징에 의존적일 때 사용, `L2 (Eucleadean)`는 특징에 의존적이지 않을 때 사용
-5.  하이퍼 파라미터를 결정할 때, `Validation set` 을 설정하고, `Test set`은 마지막에 오직 1번만 사용한다.
+이값은 seocnd moment를 0으로 초기화 시켰기 때문에 발생하는 인공적인 현상이다.
 
-## Linear Classification  
+여기에 bais term을 추가하면 다음과 같다.
 
-1. `Linear Classifier`는 `레고 블럭`에 비유가능. `레고 블럭`을 쌓아서 `Nerual Network` 구성
+``` python
+first_moment = 0
+second_moment = 0
 
-2. 수식으로 다음과 같이 표현 가능하다.
+for t in range(1, num_itreations):
+   dx = compute_gradient(x)
+   first_moment = beta1 * first_moment + (1 - beta1) * dx
+   second_moment = beta2 * second_moment + (1 - beta2) * dx * dx
 
-   <p align="center"> 
-   ${ 
-      f(x, W) = Wx + b
-   }$ 
-   </p>
+   fist_unbias = first_moment / (1 - beta1 ** t)
+   second_unbias = second_moment / (1 - beta2 ** t)
 
-3. `x`는 input 이미지, `W`는 이미지에 대한 요약된 정보. `Wx`는 클래스 간 템플릿의 유사도를 측정하는 연산
+   x -= learning_rate * first_moment / (np.sqrt(second_moment) + 1e-7)
+```
 
-4. 각 클래스에 대해서 단 하나의 템플릿만 학습하므로 풀지 못하는 여러 문제가 존재
+실제로 Adam은 매우 성능이 좋다.
 
-5. 아주 쉽게 이해하고 해석할 수 있는 알고리즘 이라는 의의가 있다. 
+beta1 = 0.9, beta2 = 0.99로 설정하고 lr을 1e-3~1e-4 정도로만 설정하면
+
+모든 아키텍쳐에서 잘 동작한다.
+
+Adam을 이용하면 각 차원마다 적절하게 속도를 높이고 줄이면서
+
+독립적으르ㅗ step을 조절한다.
+
+손실함수가 각 방향으로 정렬되지 않고 기울어진 타원이라면
+
+Adam은 차원에 해당하는 축만을 조절할 수 있다.
+
+즉 **수평 수직축으로는 조절이 되나 회전은 불가능하다**
+
+![](/assets/image/2022-02-19-00-02-32.png)
+
+
+하이퍼파라미터로서 learning rate를 설정하는 다양한 방법이 존재한다.
+
+1. step decay
+   > 처음엔 learning rate를 높게 하고 <br/>
+   나중엔 learning rate을 높게 하는 방법이다.
+
+2. exponetial decay
+3. 1/t decay
+
+![](/assets/image/2022-02-19-00-04-26.png)
+
+위 그림은 Resnet 논문에 있는 그림인데 현재 수렴을 잘 하고 있는 상황에서
+
+gradient가 점점 작아질때 lr을 낮추어야 한다.
+
+lr이 너무 깊은 깊게 갈수가 없기 때문이다. 
+
+따라서 우리는
+
+1. 우선 decay 없이 학습한다.
+2. loss curve를 잘 살피고 있다가 decay가 필요한 곳이 어디인지 고려
+
+다음 방법을 적용하면 된다. 
+
+![](/assets/image/2022-02-19-00-05-54.png)
+
+1. gradient 정보를 이용해서 손실함수를 선형함수로 근사시킨다. 
+2. 이 1차 근사함수를 실제 손실함수라고 가정하고 step을 내려간다.
+   > 하지만 이 근사함수로는 멀리 갈 수 없다.
+
+
+![](/assets/image/2022-02-19-00-06-53.png)
+좀더 나은 방법으로는 2차 근사 정보를 추가적으로 활용할 수 있다.
+
+해당예시를 다차원으로 확장시키면 Newton step 이라고 한다. 
+
+
+## L-BFGS
+
+위 방법은 사실상 DNN에서는 잘 사용되지 않는 방법이다.
+
+Stochastic case에서는 잘 동작하지 않는다.
+
+non-convex problems에도 부적합하다.
+
+## 정리
+
+따라서 실제로 Adam을 가장 많이 사용한다.
+
+하지만 full batch update가 가능하고 sthochasticity가 적은 경우라면
+
+L-BFGS가 가장 좋은 선택이 될 수있다.
+
