--- a/_posts/CS231n/2022-01-15-CS231n_7.md
+++ b/_posts/CS231n/2022-01-15-CS231n_7.md
@@ -331,3 +331,127 @@ non-convex problems에도 부적합하다.
 
 L-BFGS가 가장 좋은 선택이 될 수있다.
 
+![](/assets/image/2022-02-20-17-16-27.png)
+
+train error에 대해서 좀 더 자세히 다뤄보자.
+
+우리가 일반적으로 원하는 것은 test, train 사이의 gap을 줄이는 것이다.
+
+Q. 손실함수의 최적화를 마친 상황에서 한번도 보지못한 데이터에서의 성능을 올리기 위해선 어떻게 해야할까?
+ > A . 모델을 하나만 학습시키지 말고 10개의 모델을 독립적으로 학습 후 <br/>
+ 10개 모델 결과의 평균을 이용하는 것이 하나의 방법이 될 수 있다.
+
+ 이렇게 여러가지 모델을 합치는 방법을 `앙상블 기법` 이라고 한다.
+
+ 1. 여러개의 독립적인 모델을 학습
+ 2. 테스트타임에서 결과들의 평균을 이용
+
+이 방법을 사용하게 되면 약 2%의 성능이 향상되는 것을 볼 수 있다. 
+
+
+![](/assets/image/2022-02-20-17-18-55.png)
+
+학습도중 중간 모델들을 저장(snap shot) 하고 앙상블로 사용한다.
+
+Test time에는 여러가지 snapshots에서 나온 예측값들을 평균내서 사용하는 것.
+
+이것이 바로 앙상블 기법이다.
+
+Q. 모델간의 loss 차이가 크면 한쪽이 overfitting일 수 있으니 별로 안좋고 또 차이가 작아도 안좋지 않을까?
+ > A. gap이 중요한 것이 아니라 validation set의 성능을 최대화 시키는 것이 중요
+
+Q. 앙상블 모델마다 하이퍼 파라미터를 동일하게 줘야하는가? 
+> A. 아니다, 다양한 모델사이즈, lr, regularization 기법등을 앙상블 할 수 있음.
+
+또 다른 방법으로는 학습하는 동안에 
+
+파라미터의 exponentially decaying average를 계속 계산하는 방법이 있다.
+
+check points에서의 파라미터를 그대로 쓰지 않고 
+
+smoothly decaying average를 사용할 수도 있다. 
+
+하지만 결국 **가장 중요한 것은 단일모델의 성능을 향상시키는 것**이다.
+
+이것은 `Regularization`을 이용하면 된다. 
+
+# Regularization 
+
+정규화에서는 loss term을 더하는 방법이 이용된다. 
+
+$$ L = \frac{1}{N}\sum ^N_{i=1} \sum_{j\neq{y_i}}max(0, f(x_i; W)_j - f(x_i; W)_{y_i} + 1) + \lambda R(W)$$
+
+정규화는 다양한 방법이 존재하는데 대표적으로 
+
+- L1 Regularization <br/>
+  > $$ R(W) = \sum_k \sum_l | W_{k,l} |$$
+  
+- L2 Regularization
+  > $$ R(W) = \sum_k \sum_l W^2_{k,l}$$
+- Elastic net (L1 + L2)
+  > $$ R(W) = \sum_k \sum_l \beta W^2_{k,l} +| W_{k,l} | $$
+가 있다.
+
+
+## Dropout
+그 외에 방법으로 `Drouout`이라는 것이 있다. 
+
+- froward pass 과정에서 임의의 일부 뉴런을 0으로 만드는것.
+- conv layer의 경우 여러 channels이 있으므로 일부 channel 자체를 dropout
+
+![](/assets/image/2022-02-20-17-56-17.png)
+
+Q. 일부 값들을 0으로 만들며 training time의 네트워크를 심각하게 훼손시키는 방법이 과연 좋은 idea라고 할수 있을까?
+> A. 특징들간의 상호작용을 방지하기 때문에 <br/>
+> 네트워크가 어떤 일부 features에만 의존하지 못하게 해준다. <br/><br/>
+ 이것은 overfitting을 방지해준다. 또한 단일 모델로 앙상블 효과를 가지게 해준다.
+
+Test time에는 샘플링을 통해서 적분을 근사한다.
+
+Z를 여러번 sampling하여 test time에 average out 시킨다.
+
+이렇게 되어도 여전히 randomness는 존재한다. 
+
+ 참고로 batch normalization도 정규화를 하므로 
+
+ 일반적으로 drop out과 함께 사용하지는 않는다.
+
+ ## Data Augmentation
+
+ train할때 이미지의 patch를 random하게 잡아내거나 
+
+ 이미지를 반전시킨뒤 train dataset에 추가시키는 방법이다. 
+
+ 그 외에 밝기값을 바꿔주는 경우도 있다. 
+
+ ![](/assets/image/2022-02-20-18-04-47.png)
+
+ `Data Augmentation`은 어떤문제에도 적용해 볼 수 있는 아주 일반적인 방법이다.
+
+ Test Time에 입력데이터에 임의의 변환을 시켜주게 되면
+
+ 일종의 **regularization 효과를 얻을 수 있다. **
+
+ train time에는 stochasitcity가 추가되고
+
+ test time에는 marginalize out 되기 때문이다. 
+
+ ![](/assets/image/2022-02-20-18-06-32.png)
+
+ 이 외에도 다양한 regularization 방법이 존재한다.
+
+ # Transfer Learning 
+
+ `Transfer Learning` 이란 전이학습이라고도 불린다.
+ - 이미 pretrained된 모델을 이용하여 우리가 이용하는 목적에 맞게 fine tuning하는 방법
+
+ 1. 최종 feature와 class scores간의 연결을 초기화한다.
+ 2. 이후 새로 정의한 가중치행렬을 초기화하고 나머지 이전의 모든 layer들의 가중치는 고정
+   
+즉 , 오로지 마지막 layer만 가지고 우리 데이터를 학습시키는 것이다.
+
+아주 작은 dataset 일지라도 아주 잘 동작하는 모델을 만들 수 있다.
+
+![](/assets/image/2022-02-20-18-09-47.png)
+![](/assets/image/2022-02-20-18-09-57.png)
+![](/assets/image/2022-02-20-18-10-11.png)
