--- a/_posts/밑바닥/2021-12-22-mit_5-1.md
+++ b/_posts/밑바닥/2021-12-22-mit_5-1.md
@@ -1,5 +1,5 @@
 ---
-title : "$4-1. 신경망 학습 (손실함수)"
+title : "$5-1. 계산그래프와 연쇄법칙"
 category :
     - mit
 tag :
@@ -10,4 +10,150 @@ toc : true
 toc_sticky: true
 comments: true
 ---
+계산그래프와 연쇄법칙에 대해 알아보자.
 
+
+수치 미분은 단순하고 구현하기도 쉽지만
+
+계산 시간이 오래 걸린다는 게 단점이다.
+
+가중치 매개변수의 기울기를 효율적으로 계산하는 오차역전파법 backpropagation 을 배워보자.
+
+오차역전파법을 제대로 이해하는 방법은 두 가지가 있다.
+
+수식을 통한 것
+계산 그래프를 통한 것
+# 계산 그래프
+계산 그래프 computational gragh 는 계산 과정을 그래프로 나타낸 것.
+
+그래프는 복수의 노드 node 와 에지 edge 로 표현된다.
+
+계산 그래프로 풀다
+계산 그래프에 익숙해지자.
+
+## 문제 1
+
+현빈 군은 슈퍼에서 1개에 100원인 사과를 2개 샀다.
+
+이때 지불 금액을 구하자.
+
+단, 소비세가 10% 부과된다.
+
+계산 그래프는 계산 과정을 노드와 화살표(에지)로 표현한다.
+
+계산 그래프로 풀어본 문제 1의 답
+
+
+![](/assets/image/2022-02-20-19-42-58.png)
+
+![](/assets/image/2022-02-20-19-45-14.png)
+
+## 문제 2
+
+현빈 군은 슈퍼에서 사과를 2개, 귤을 3개 샀다.
+
+사과는 1개에 100원, 귤을 1개에 150원이다.
+
+소비세가 10% 일 때 지불 금액을 고르자.
+
+
+
+![](/assets/image/2022-02-20-19-44-15.png)
+
+계산 그래프를 이용한 문제 풀이는 다음 흐름으로 진행된다.
+
+계산 그래프를 구성한다.
+그래프에서 계산을 왼쪽에서 오른쪽으로 진행한다.
+여기서 계산을 왼쪽에서 오른쪽으로 진행하는 단계를 순전파 forward propagation 이라고 한다.
+
+순전파는 계산 그래프의 출발점부터 종착점으로의 전파이다.
+
+오르쪽에서 왼쪽으로의 전파도 있다. 역전파이다!
+
+역전파는 이후 미분을 계산할 때 중요한 역할을 한다.
+
+## 국소적 계산
+
+계산 그래프의 특징은 국소적 계산을 전파함으로써
+
+최종 결과를 얻는다는 점에 있다.
+
+국소적이란, 자신과 직접 관계된 작은 범위라는 뜻이다.
+
+국소적 계산은 결국, 전체에서 어떤 일이 벌어지든 상관없이
+
+자신과 관계된 정보만으로 결과를 출력할 수 있다는 것이다.
+
+![](/assets/image/2022-02-20-19-46-02.png)
+
+계산 그래프의 각 노드에서의 계산은 국소적이다.
+
+계산 그래프는 국소적 계산에 집중한다.
+
+전체 계산이 아무리 복잡하더라도 각 단계에서 하는 일은 해당 노드의 국소적 계산이다.
+
+국소적인 계산은 단순하지만, 그 결과를 전달함으로써 전체를 구성하는 복잡한 계산을 할 수 있다.
+
+## 왜 계산 그래프로 푸는가?
+계산 그래프의 이점.
+
+국소적 계산
+계산 그래프는 중간 계산 결과를 모두 보관할 수 있다.
+실제 계산 그래프를 사용하는 가장 큰 이유는
+
+역전파를 통해 미분을 효율적으로 계산할 수 있는 점에 있다.
+
+문제 1은 사과를 2개 사서 소비세를 포함한 최종 금액을 구하는 것이다.
+
+여기에서 만약 사과 가격이 오르면 최종 금액에 어떤 영향을 끼치는지 알고 싶다면,
+
+이는 사과 가격에 대한 지불 금액의 미분을 구하는 문제에 해당한다.
+
+계산 그래프 상의 역전파에 의해 미분을 구할 수 있다.
+
+![](/assets/image/2022-02-20-19-46-29.png)
+
+역전파는 순전파와는 반대 방향의 굵은 화살표로 그린다.
+
+이 전파는 국소적 미분을 전달하고, 그 미분 값은 화살표의 아래에 적는다.
+
+이 결과로부터 사과 가격에 대한 지불 금액의 미분 값은 2.2라 할 수 있다.
+
+사과가 1원 오르면 최종 금액은 2.2원 오른다는 의미이다.
+
+여기에서는 사과 가격에 대한 미분만 구했지만,
+
+소비세에 대한 지불 금액의 미분이나, 사과 개수에 대한 지불 금액의 미분도 같은 순서로 구할 수 있다.
+
+그리고 그 때는 중간까지 구한 미분 결과를 공유할 수 있어서
+
+다수의 미분을 효율적으로 계산할 수 있다.
+
+이처럼 계산 그래프의 이점은, 순전파와 역전파를 활용해서
+
+각 변수의 미분을 효율적으로 구할 수 있다는 것이다.
+
+# 연쇄법칙
+국소적 미분을 전달하는 원리는 연쇄법칙 chain rule 에 따른 것이다.
+
+![](/assets/image/2022-02-20-19-47-01.png)
+
+5.2.1 계산 그래프의 역전파
+5.2.2 연쇄법칙이란?
+5.2.3 연쇄법칙과 계산 그래프
+식 5-4의 연쇄법칙 계산을 계산 그래프로 나타내보자.
+
+![](/assets/image/2022-02-20-19-47-40.png)
+
+
+역전파의 계산 절차에서
+
+노드로 들어온 입력 신호에
+
+그 노드의 국소적 미분:편미분을 곱한 후
+
+다음 노드로 전달한다.
+
+즉, 역전파가 하는 일은 연쇄 법칙의 원리와 같다.
+
+![](/assets/image/2022-02-20-19-47-53.png)
