--- a/_posts/밑바닥/2021-12-22-mit_5-2.md
+++ b/_posts/밑바닥/2021-12-22-mit_5-2.md
@@ -1,5 +1,5 @@
 ---
-title : "$4-1. 신경망 학습 (손실함수)"
+title : "$5-2. 역전파와 단순계층 구현"
 category :
     - mit
 tag :
@@ -10,4 +10,176 @@ toc : true
 toc_sticky: true
 comments: true
 ---
+역전파에 대하여 알아보고 단순 계층을 구현해보자.
 
+
+# 역전파
+앞에서 계산 그래프의 역전파가 연쇄법칙에 따라 진행되는 모습을 설명했다.
+
+이번 절에서는 +,x 등의 연산을 예로 들어 역전파의 구조를 살펴보자.
+
+## 덧셈 노드의 역전파
+`z = x+y` 라는 식을 대상으로 그 역전파를 살펴보자.
+
+`z = x+y` 의 미분은 다음과 같이 해석적으로 계산할 수 있다.
+
+![](/assets/image/2022-02-20-19-50-02.png)
+
+![](/assets/image/2022-02-20-19-50-13.png)
+
+
+
+
+
+
+## 곱셈 노드의 역전파
+z = xy 라는 식을 생각해보자.
+
+이 식의 미분은 다음과 같다.
+
+![](/assets/image/2022-02-20-19-50-24.png)
+
+위 식에서 계산 그래프는 다음과 같이 그릴 수 있다.
+
+
+곱셈 노드의 역전파는
+
+상류의 값에 순전파 때의 입력 신호들을 서로 바꾼 값을 곱해서 하류로 보낸다.
+
+![](/assets/image/2022-02-20-19-50-56.png)
+
+구체적인 예를 들어보자.
+10*5=50 이라는 계산이 있고,
+역전파 때 상류에서 1.3 값이 흘러온다고 하자.
+이를 계산 그래프로 그리면 다음과 같다.
+
+![](/assets/image/2022-02-20-19-51-05.png)
+
+덧셈의 역전파에서는 상류의 값을 그대로 흘려보내서 순방향 입력 신호의 값은 필요하지 않다.
+
+하지만 곱셈의 역전파는 순방향 입력 신호의 값이 필요하다.
+
+그래서 곱셈 노드를 구현할 때는 순전파의 입력 신호를 변수에 저장해둔다.
+
+5.3.3 사과 쇼핑의 예
+사과 쇼핑 예를 다시 살펴보자.
+
+![](/assets/image/2022-02-20-19-51-15.png)
+
+5.4 단순한 계층 구현하기
+사과 쇼핑 예를 파이썬으로 구현해보자.
+
+여기서는 계산 그래프의 곱셈 노드를 MulLayer, 덧셈 노드를 AddLayer 이름으로 구현한다.
+
+다음 절에서는 신경망을 구성하는 계층 각각을 하나의 클래스로 구현한다.
+
+여기서의 계층이란, 신경망의 기능 단위이다.
+
+5.4.1 곱셈 계층
+모든 계층은 forward():순전파 와 backward():역전파 라는 공통의 메서드:인터페이스를 갖도록 구현한다.
+
+``` python
+class MulLayer:
+    def __init__(self):
+        self.x = None
+        self.y = None
+
+    def forward(self, x, y):
+        self.x = x
+        self.y = y                
+        out = x * y
+
+        return out
+
+    def backward(self, dout):
+        dx = dout * self.y  # x와 y를 바꾼다.
+        dy = dout * self.x
+
+        return dx, dy
+```
+
+이 MulLayer 를 사용해서
+
+사과 쇼핑을 구현해보자.
+
+![](/assets/image/2022-02-20-19-51-48.png)
+
+
+
+MulLayer 를 사용해서 순전파를 구현해보자.
+
+```python
+from layer_naive import *
+
+apple = 100
+apple_num = 2
+tax = 1.1
+
+mul_apple_layer = MulLayer()
+mul_tax_layer = MulLayer()
+
+# forward
+apple_price = mul_apple_layer.forward(apple, apple_num)
+price = mul_tax_layer.forward(apple_price, tax)
+
+print(price)
+각 변수에 대한 미분은 backward() 에서 구할 수 있다.
+
+# backward
+dprice = 1
+dapple_price, dtax = mul_tax_layer.backward(dprice)
+dapple, dapple_num = mul_apple_layer.backward(dapple_price)
+
+print(dapple, dapple_num, dtax) # 2.2, 110, 200
+```
+
+## 덧셈 계층
+```python
+class AddLayer:
+    def __init__(self):
+        pass
+
+    def forward(self, x, y):
+        out = x + y
+
+        return out
+
+    def backward(self, dout):
+        dx = dout * 1
+        dy = dout * 1
+
+        return dx, dy
+
+
+apple = 100
+apple_num = 2
+orange = 150
+orange_num = 3
+tax = 1.1
+
+# layer
+mul_apple_layer = MulLayer()
+mul_orange_layer = MulLayer()
+add_apple_orange_layer = AddLayer()
+mul_tax_layer = MulLayer()
+
+# forward
+apple_price = mul_apple_layer.forward(apple, apple_num)  # (1)
+orange_price = mul_orange_layer.forward(orange, orange_num)  # (2)
+all_price = add_apple_orange_layer.forward(apple_price, orange_price)  # (3)
+price = mul_tax_layer.forward(all_price, tax)  # (4)
+
+# backward
+dprice = 1
+dall_price, dtax = mul_tax_layer.backward(dprice)  # (4)
+dapple_price, dorange_price = add_apple_orange_layer.backward(dall_price)  # (3)
+dorange, dorange_num = mul_orange_layer.backward(dorange_price)  # (2)
+dapple, dapple_num = mul_apple_layer.backward(dapple_price)  # (1)
+
+print("price:", int(price))
+print("dApple:", dapple)
+print("dApple_num:", int(dapple_num))
+print("dOrange:", dorange)
+print("dOrange_num:", int(dorange_num))
+print("dTax:", dtax)
+```
